fix colour bleed in wpadminbar

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -712,6 +712,53 @@ html[data-theme="dark"] {
 			}
 		}
 	}
+
+	// -----------------------------------------------------------
+	// Restore WP admin bar to its own default colours (dark mode
+	// overrides above were bleeding through).
+	// -----------------------------------------------------------
+	#wpadminbar {
+		background: #1d2327 !important;
+		color: #c3c4c7 !important;
+
+		*,
+		.ab-item,
+		.ab-empty-item,
+		li,
+		span,
+		strong {
+			color: #c3c4c7 !important;
+			background-color: transparent !important;
+		}
+
+		a,
+		a:visited,
+		.ab-item,
+		.ab-item:visited {
+			color: #c3c4c7 !important;
+		}
+
+		a:hover,
+		a:focus,
+		.ab-item:hover,
+		.ab-item:focus,
+		li:hover > .ab-item,
+		li.hover > .ab-item {
+			color: #72aee6 !important;
+			background-color: #2c3338 !important;
+		}
+
+		.ab-icon,
+		.ab-icon:before,
+		.ab-item:before {
+			color: #c3c4c7 !important;
+		}
+
+		.ab-sub-wrapper,
+		.ab-submenu {
+			background: #2c3338 !important;
+		}
+	}
 }
 
 // -------------------------------------------------------------
